--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "http-proxy": "^1.18.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
+    "@types/http-proxy": "^1.17.8",
     "@types/node": "17.0.23",
     "@types/react": "18.0.3",
     "@types/react-dom": "18.0.0",
