--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "http-proxy": "^1.18.1",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.0.0",
     "socket.io-client": "^4.4.1"
   },
