--- a/backend/package.json
+++ b/backend/package.json
@@ -22,43 +22,44 @@
   },
   "dependencies": {
     "@nestjs/axios": "^0.0.7",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/platform-socket.io": "^8.4.4",
-    "@nestjs/typeorm": "^8.0.3",
-    "@nestjs/websockets": "^8.4.4",
-    "express-session": "^1.17.2",
+    "@nestjs/common": "^8.4.5",
+    "@nestjs/config": "^2.0.1",
+    "@nestjs/core": "^8.4.5",
+    "@nestjs/platform-express": "^8.4.5",
+    "@nestjs/platform-socket.io": "^8.4.5",
+    "@nestjs/typeorm": "^8.0.4",
+    "@nestjs/websockets": "^8.4.5",
+    "express-session": "^1.17.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.5.5",
     "typeorm": "^0.2.45",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^8.2.6",
+    "@nestjs/schematics": "^8.0.11",
+    "@nestjs/testing": "^8.4.5",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/node": "^16.11.36",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
+    "jest": "^27.5.1",
+    "prettier": "^2.6.2",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "supertest": "^6.2.3",
+    "ts-jest": "^27.1.5",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.8.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
