--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
 version: '3.9'
 
 services:
+  frontend:
+    build: './frontend'
+    env_file:
+      - ./frontend/.env
+    ports:
+      - '3000:3000'
+
   backend:
     build: './backend'
     env_file:
-      - .env
+      - ./backend/.env
     ports:
       - '4000:4000'
 
@@ -12,10 +19,8 @@ services:
     build: './db'
     volumes:
       - 'db_data:/var/lib/postgresql/data/'
-    environment:
-      - POSTGRES_USER=${DATABASE_USERNAME}
-      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-      - POSTGRES_DB=${DATABASE_NAME}
+    env_file:
+      - ./db/.env
     ports:
       - '5432:5432'
 
