--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ENVIRONMENT=../.env next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,10 +14,10 @@
     "react": "18.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.0.0",
-    "socket.io-client": "^4.4.1"
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
-    "@types/http-proxy": "^1.17.8",
+    "@types/http-proxy": "^1.17.9",
     "@types/node": "17.0.23",
     "@types/react": "18.0.3",
     "@types/react-dom": "18.0.0",
