--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,20 @@
 version: '3.9'
 
 services:
+  nginx:
+    build: './nginx'
+    ports:
+      - '80:80'
+
   frontend:
     build: './frontend'
     env_file:
       - ./frontend/.env
-    ports:
-      - '3000:3000'
 
   backend:
     build: './backend'
     env_file:
       - ./backend/.env
-    ports:
-      - '4000:4000'
 
   db:
     build: './db'
@@ -21,8 +22,6 @@ services:
       - 'db_data:/var/lib/postgresql/data/'
     env_file:
       - ./db/.env
-    ports:
-      - '5432:5432'
 
 volumes:
   db_data:
