--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "http-proxy": "^1.18.1",
-    "next": "12.1.5",
+    "http-proxy-middleware": "^2.0.6",
+    "next": "12.1.6",
     "react": "18.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.0.0",
