--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ server {
         proxy_redirect off;
     }
 
-    location /api {
+    location /api/ {
         rewrite /api/(.*) /$1 break;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
