--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - 'db_data:/var/lib/postgresql/data/'
     env_file:
       - ./db/.env
+    ports:
+      - '5432:5432'
 
 volumes:
   db_data:
