--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY package-lock.json ./
-RUN npm ci
+RUN npm i
+RUN npm i -D @types/multer
+RUN mkdir avatars
 
 COPY . ./
 RUN npm run build
