--- a/backend/package.json
+++ b/backend/package.json
@@ -25,11 +25,16 @@
     "@nestjs/common": "^9.0.5",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.5",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.5",
     "@nestjs/platform-socket.io": "^9.0.5",
     "@nestjs/typeorm": "^9.0.0",
     "@nestjs/websockets": "^9.0.5",
     "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-42": "^1.2.6",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -45,6 +50,7 @@
     "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.6",
     "@types/node": "^18.6.1",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
