--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,6 @@
     "@nestjs/platform-socket.io": "^9.0.5",
     "@nestjs/typeorm": "^9.0.0",
     "@nestjs/websockets": "^9.0.5",
-    "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
@@ -39,15 +38,13 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
-    "typeorm": "^0.3.7",
-    "uuid": "^8.3.2"
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.5",
     "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.6",
     "@types/node": "^18.6.1",
     "@types/passport-jwt": "^3.0.6",
