--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,7 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "typeRoots": [
-      "./src/types",
+      "./src/@types",
       "./node_modules/@types"
     ]
   }
