--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.5",
     "@nestjs/platform-socket.io": "^9.0.5",
+    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/typeorm": "^9.0.0",
     "@nestjs/websockets": "^9.0.5",
     "passport": "^0.6.0",
@@ -46,6 +47,7 @@
     "@nestjs/testing": "^9.0.5",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.6.1",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
