--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     build: './backend'
     env_file:
       - ./backend/.env
+    volumes:
+      - 'static:/usr/src/app/static/'
 
   db:
     build: './db'
@@ -27,3 +29,4 @@ services:
 
 volumes:
   db_data:
+  static:
