--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.2.4",
     "@types/http-proxy": "^1.17.9",
     "@types/node": "18.6.1",
     "@types/react": "^18.0.15",
