--- a/backend/package.json
+++ b/backend/package.json
@@ -22,16 +22,16 @@
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
-    "@nestjs/common": "^9.0.5",
+    "@nestjs/common": "^9.0.8",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.5",
+    "@nestjs/core": "^9.0.8",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.5",
-    "@nestjs/platform-socket.io": "^9.0.5",
+    "@nestjs/platform-express": "^9.0.8",
+    "@nestjs/platform-socket.io": "^9.0.8",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/typeorm": "^9.0.0",
-    "@nestjs/websockets": "^9.0.5",
+    "@nestjs/websockets": "^9.0.8",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
@@ -39,21 +39,22 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
+    "socket.io": "^4.5.1",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.5",
+    "@nestjs/testing": "^9.0.8",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.6.1",
+    "@types/node": "^18.6.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
@@ -63,7 +64,7 @@
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.0.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4"
   },
   "jest": {
