--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "date-fns": "^2.29.1",
     "date-fns-tz": "^1.3.6",
     "http-proxy": "^1.18.1",
