--- a/backend/package.json
+++ b/backend/package.json
@@ -22,16 +22,18 @@
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
-    "@nestjs/common": "^9.0.8",
+    "@nestjs/common": "^9.0.9",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.8",
+    "@nestjs/core": "^9.0.9",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.8",
-    "@nestjs/platform-socket.io": "^9.0.8",
+    "@nestjs/platform-express": "^9.0.9",
+    "@nestjs/platform-socket.io": "^9.0.9",
     "@nestjs/serve-static": "^3.0.0",
-    "@nestjs/typeorm": "^9.0.0",
-    "@nestjs/websockets": "^9.0.8",
+    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.0.9",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
@@ -45,23 +47,23 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.8",
+    "@nestjs/testing": "^9.0.9",
     "@types/express": "^4.17.13",
-    "@types/jest": "28.1.6",
+    "@types/jest": "28.1.7",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.6.4",
+    "@types/node": "^18.7.5",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "eslint": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^28.0.8",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
