--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-oauth-popup": "^1.0.5",
     "socket.io-client": "^4.5.1"
   },
