--- a/backend/package.json
+++ b/backend/package.json
@@ -34,10 +34,12 @@
     "@nestjs/websockets": "^9.0.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
     "pg": "^8.8.0",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
@@ -45,29 +47,29 @@
     "typeorm": "^0.3.9"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.2",
+    "@nestjs/cli": "^9.1.3",
     "@nestjs/schematics": "^9.0.3",
     "@nestjs/testing": "^9.0.11",
-    "@types/express": "^4.17.13",
-    "@types/jest": "29.0.0",
+    "@types/express": "^4.17.14",
+    "@types/jest": "29.0.3",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.7.15",
+    "@types/node": "^18.7.18",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "eslint": "^8.23.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.0.2",
+    "jest": "^29.0.3",
     "prettier": "^2.7.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.8",
-    "ts-loader": "^9.3.1",
+    "ts-jest": "^29.0.1",
+    "ts-loader": "^9.4.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
