--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.0.11",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "otplib": "^12.0.1",
@@ -50,6 +51,7 @@
     "@nestjs/cli": "^9.1.3",
     "@nestjs/schematics": "^9.0.3",
     "@nestjs/testing": "^9.0.11",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/jest": "29.0.3",
     "@types/multer": "^1.4.7",
